# discord-tournament-bot

./: .gitignore  CMakeLists.txt  Dockerfile  config.example.json  railway.toml
include/: bot.hpp  config.hpp  store.hpp
include/bracket/: bracket_renderer.hpp
include/modules/: message_module.hpp  roll_module.hpp  tournament_module.hpp  warning_module.hpp
src/: bot.cpp  config.cpp  main.cpp  store.cpp
src/bracket/: bracket_renderer.cpp
src/modules/: message_module.cpp  roll_module.cpp  tournament_module.cpp  warning_module.cpp
